--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,11 +1,20 @@
-db.driverClassName=oracle.jdbc.driver.OracleDriver
-db.url=jdbc:oracle:thin:@//localhost:1521/orcl
-db.username=bocc
-db.password=boccpass
-db.maxTotal=1500
-db.minIdle=10
-db.maxWaitMillis=60000
-db.validationQuery=SELECT 1 FROM DUAL
-db.testOnBorrow=true
-db.poolPreparedStatements=true
-db.defaultAutoCommit=false
+
+#oracle Çý¶¯
+#db.driverClassName=oracle.jdbc.driver.OracleDriver
+#db.url=jdbc:oracle:thin:@//localhost:1521/orcl
+#db.username=bocc
+#db.password=boccpass
+#db.maxTotal=1500
+#db.minIdle=10
+#db.maxWaitMillis=60000
+#db.validationQuery=SELECT 1 FROM DUAL
+#db.testOnBorrow=true
+#db.poolPreparedStatements=true
+#db.defaultAutoCommit=false
+
+#mysqlÇý¶¯
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.username=root
+jdbc.password=
+
